// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GateKeeperContract should deploy correctly 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{946A98B60000000000000000}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
          "to": "kQBghZpIvGnwP09Ep-wbwkdt3nBVhFlmFO88AZJ0OPR-JLQr",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 7139n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{AFF90F570000000000000000}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQBghZpIvGnwP09Ep-wbwkdt3nBVhFlmFO88AZJ0OPR-JLQr",
            "to": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
            "type": "internal",
            "value": 991665000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`GateKeeperContract should set position address if called by userPosition contract 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{946A98B60000000000000000}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
          "to": "kQBghZpIvGnwP09Ep-wbwkdt3nBVhFlmFO88AZJ0OPR-JLQr",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 7139n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{AFF90F570000000000000000}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQBghZpIvGnwP09Ep-wbwkdt3nBVhFlmFO88AZJ0OPR-JLQr",
            "to": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
            "type": "internal",
            "value": 991665000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{CF891F9E800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B3_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQAHcj4SfGhtFHdHV7QxJffLrWD1_w378SL1dOPG0Bz63Ehu",
          "to": "kQBghZpIvGnwP09Ep-wbwkdt3nBVhFlmFO88AZJ0OPR-JLQr",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 2848n,
      },
    ],
  },
]
`;
